# php-analyzer

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs  gennodes.mjs
src/: autotree.rs  config.rs  description.rs  errornode.rs  extra.rs  issue.rs  lib.rs  parser.rs  phpdoccomment.rs  symbols.rs  value.rs
src/analysis/: analyzer.rs  data.rs  hardening.rs  mod.rs  scope.rs  state.rs
src/autonodes/: _expression.rs  _literal.rs  _primary_expression.rs  _statement.rs  _type.rs  abstract_modifier.rs  anonymous_function_creation_expression.rs  anonymous_function_use_clause.rs  any.rs  argument.rs  arguments.rs  array_creation_expression.rs  array_element_initializer.rs  arrow_function.rs  assignment_expression.rs  attribute.rs  attribute_group.rs  attribute_list.rs  augmented_assignment_expression.rs  base_clause.rs  binary_expression.rs  boolean.rs  bottom_type.rs  break_statement.rs  by_ref.rs  case_statement.rs  cast_expression.rs  cast_type.rs  catch_clause.rs  class_constant_access_expression.rs  class_constant_access_identifier.rs  class_declaration.rs  class_interface_clause.rs  clone_expression.rs  colon_block.rs  comment.rs  compound_statement.rs  conditional_expression.rs  const_declaration.rs  const_element.rs  (+124 more)
src/description/: class_declaration.rs  compound_statement.rs  function_definition.rs  member_access_expression.rs  member_call_expression.rs  method_declaration.rs  object_creation_expression.rs  scoped_call_expression.rs  variable_name.rs
src/native/: .gitignore  generate.php  mod.rs  override.php
src/nodeanalysis/: _expression.rs  analysis.rs  (+147 more)
(+98 files in other folders)
