[package]
name = "phpanalyzer"
version = "0.1.0"
authors = ["Bjørn Tore Hagen <bjorn.hagen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter="*"
lazy_static = "1"
regex = "1"
nom = "7"

[build-dependencies]
cc="*"