[package]
name = "phpanalyzer"
version = "0.1.0"
authors = ["Bjørn Tore Hagen <bjorn.hagen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
rust-version = "1.78"

[dependencies]
tree-sitter = "0.22.6"
lazy_static = "1"
regex = "1"
nom = "7"

[build-dependencies]
cc="*"
